--- a/views/public/index.html
+++ b/views/public/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HASHVANK</title>
 
-    <link rel="stylesheet" type="text/css" href="assets/main.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:8080/assets/main.css">
 </head>
 
 <body>
     <div id="app"></div>
-    <script type="module" src="assets/main.js"></script>
+    <script type="module" src="http://localhost:8080/assets/main.js"></script>
 </body>
 
 </html>
