--- a/views/src/assets/scss/common.scss
+++ b/views/src/assets/scss/common.scss
@@ -6,16 +6,20 @@ a {
 /* Change Autocomplete styles in Chrome*/
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus
-input:-webkit-autofill, 
+input:-webkit-autofill:focus,
 textarea:-webkit-autofill,
 textarea:-webkit-autofill:hover
 textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
-  -webkit-box-shadow: 0 0 0px 1000px #fff inset;
-  transition: background-color 5000s ease-in-out 0s;
+  margin: 2px;
+  -webkit-box-shadow: 0 0 0px 1000px #fff inset !important;
+  transition: background-color 5000s ease-in-out 0s !important;
+  -webkit-transition: background-color 5000s ease-in-out 0s !important;
+  -moz-transition: background-color 5000s ease-in-out 0s !important;
+  -ms-transition: background-color 5000s ease-in-out 0s !important;
+  -o-transition: background-color 5000s ease-in-out 0s !important;
 }
 
 body {
@@ -211,13 +215,6 @@ body {
         color: #8898AA;
         font-size: 15px;
         padding: 15px 20px;
-        border: 1px solid #172B4D ;
-        border-radius: 5px;
-        -webkit-border-radius: 5px;
-        -moz-border-radius: 5px;
-        -ms-border-radius: 5px;
-        -o-border-radius: 5px;
-        box-shadow: 0 1px 5px #0003, 0 2px 2px #00000024, 0 3px 1px -2px #0000001f;
 
         &:focus {
           border-color: #7764E4;
@@ -226,7 +223,21 @@ body {
 
       .q-field__control {
         padding: 0px !important;
+
+        &::before {
+          border: 1px solid #172B4D ;
+          border-radius: 5px;
+          -webkit-border-radius: 5px;
+          -moz-border-radius: 5px;
+          -ms-border-radius: 5px;
+          -o-border-radius: 5px;
+          box-shadow: 0 1px 5px #0003, 0 2px 2px #00000024, 0 3px 1px -2px #0000001f;
+        }
       }
+    }
+    
+    .q-field__append {
+      padding-right: 12px;
     }
   }
 
